--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
 		"vscode": "^1.52.0"
 	},
 	"categories": [
+		"Formatters",
+		"Snippets",
 		"Other"
+	],
+	"keywords": [
+		"css"
 	],
 	"activationEvents": [
 		"onCommand:CssGenerator"
